# kechengProject

./: build.gradle  lyhKey.jks  settings.gradle
XpHelloword/: build.gradle
XpHelloword/src/main/: AndroidManifest.xml
XpHelloword/src/main/assets/: xposed_init
XpHelloword/src/main/java/com/example/xphelloword/: CLogUtils.java  HelloHook.java  MainActivity.java  MyApplication.java
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: NetLyhKey.cer
app/src/main/java/com/kejian/one/: App.java  MainActivity.java  SingleDoubleClickListener.java
app/src/main/java/com/kejian/one/Test/: ErrorTest.java  Test.java  Test1.java  TestObject1.java  TestObject2.java
app/src/main/java/com/kejian/one/net/: Verifier.java
app/src/main/java/com/kejian/one/utils/: CLogUtils.java  Encrypt.java  PermissionUtils.java  RootUtils.java  ThreadUtils.java
app/src/main/jni/: main.cpp  main.h
app/src/main/jni/encrypt/: MD5.cpp  MD5.h
app/src/main/jni/inlineHook/: inlineHook.cpp
app/src/main/jni/testB/: test.cpp
app/src/main/jni/utils/: FileUtils.cpp  Log.h  logging.h  parse.cpp  parse.h
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
soTest/: CMakeLists.txt  build.gradle
soTest/src/main/: AndroidManifest.xml
soTest/src/main/java/com/kejian/one/: MainActivity.java
soTest/src/main/java/com/kejian/one/utils/: ToastUtils.java
soTest/src/main/jni/: main.cpp  main.h
soTest/src/main/jni/test/: test.cpp  test.h
soTest/src/main/jni/utils/: logging.h
soTest/src/main/res/layout/: activity_main.xml
socketclient/: build.gradle  build_library_ext.gradle
socketclient/src/main/java/com/vilyever/socketclient/: SocketClient.java
socketclient/src/main/java/com/vilyever/socketclient/helper/: SocketClientAddress.java  SocketClientDelegate.java  SocketClientReceiveDelegate.java
socketclient/src/main/java/com/vilyever/socketclient/server/: SocketServer.java  SocketServerClient.java
sourcetest/: build.gradle  mark
sourcetest/src/androidTest/java/com/kejian/sourcetest/: ExampleInstrumentedTest.java
sourcetest/src/main/: AndroidManifest.xml
sourcetest/src/main/res/values/: strings.xml
sourcetest/src/test/java/com/kejian/sourcetest/: ExampleUnitTest.java
test/: build.gradle  proguard-rules.pro
test/src/androidTest/java/com/kejian/test/: ExampleInstrumentedTest.java
test/src/main/: AndroidManifest.xml
test/src/main/java/com/kejian/one/: MainActivity.java
test/src/main/java/com/kejian/test/: CLogUtils.java  MainActivity.java
test/src/main/res/layout/: activity_main.xml
test/src/main/res/values/: styles.xml
test/src/test/java/com/kejian/test/: ExampleUnitTest.java
xpModule/: CMakeLists.txt  build.gradle  proguard-rules.pro
xpModule/src/main/: AndroidManifest.xml
xpModule/src/main/assets/: xposed_init
xpModule/src/main/jni/: main.cpp  main.h
xpModule/src/main/jni/Hook/: HLua.cpp  HLua.h
xpModule/src/main/jni/Substrate/: SubstrateHook.cpp
xpModule/src/main/jni/dlfc/: dlfcn_nougat.cpp  dlfcn_nougat.h
xpModule/src/main/jni/utils/: parse.h
xpModule/src/main/res/values/: strings.xml
